--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -20,7 +20,7 @@
     <MudTabPanel>
         <ChildContent>
             <MudDataGrid Virtualize=true
-                         Height="300px"
+                         Height="600px"
                          ColumnResizeMode="ResizeMode.Container"
                          FixedHeader=true
                          Hideable=true
@@ -29,17 +29,17 @@
                          SortMode="@SortMode.Multiple"
                          Groupable="false">
                 <Columns>
-                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
-                    <PropertyColumn Property="x => x.Username" />
-                    <PropertyColumn Property="x => x.IpAddress" />
-                    <PropertyColumn Property="x => x.Action" />
+                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" Sortable="true" />
+                    <PropertyColumn Property="x => x.Username" Filterable="true"/>
+                    <PropertyColumn Property="x => x.IpAddress" Filterable="true" />
+                    <PropertyColumn Property="x => x.Action" Filterable="true" />
                     <TemplateColumn>
                         <CellTemplate>
                             <MudLink OnClick="@(()=>{Nav.NavigateTo("/search/"+context.Item.Target);})">@context.Item.Target</MudLink>
                         </CellTemplate>
                     </TemplateColumn>
-                    <PropertyColumn Property="x => x.BeforeAction" />
-                    <PropertyColumn Property="x => x.AfterAction" />
+                    <PropertyColumn Property="x => x.BeforeAction"  Filterable="true" />
+                    <PropertyColumn Property="x => x.AfterAction" Filterable="true" />
 
                 </Columns>
             </MudDataGrid>
@@ -54,17 +54,11 @@
     </MudTabPanel>
     <MudTabPanel>
         <ChildContent>
-            <AuditHistoryChart ChartSeries="LoginSeries" />
-            <MudChart ChartType="ChartType.Line"
-                      ChartSeries="@LoginSeries"
-                      XAxisLabels="@(allDates.Select(d=>d.ToLocalTime().ToString("M/d")).ToArray())"
-                      Width="100%"
-                      Height="350px"
-                      ChartOptions="@LoginChartOptions"></MudChart>
+            <LoginHistoryChart />
+           
 
-            <MudFab StartIcon="@Icons.Material.Filled.ShowChart" OnClick="ToggleLineMode" />
             <MudDataGrid Virtualize=true
-                         Height="300px"
+                         Height="600px"
                          FixedHeader=true
                          ColumnResizeMode="ResizeMode.Container"
                          Hideable=true
@@ -92,7 +86,7 @@
     <MudTabPanel>
         <ChildContent>
             <MudDataGrid Virtualize=true
-                         Height="300px"
+                         Height="600px"
                          ColumnResizeMode="ResizeMode.Container"
                          FixedHeader=true
                          Hideable=true
@@ -131,14 +125,8 @@
     List<LogonAuditLog> logonEntries = new();
     List<DirectoryEntryAuditLog> auditEntries = new();
     List<SystemAuditLog> systemAuditEntries = new();
-    List<ChartSeries> LoginSeries = new();
-    InterpolationOption _chartInterpolation = InterpolationOption.Straight;
-    ChartOptions LoginChartOptions;
-    ChartSeries loginChart = new() { Name = "Daily Logins" };
-    ChartSeries uniqueUsersChart = new() { Name = "Daily Users" };
     protected override async Task OnInitializedAsync()
     {
-        LoginChartOptions = new() { InterpolationOption = _chartInterpolation };
 
         await base.OnInitializedAsync();
         BaseUri = "/audit";
@@ -151,42 +139,10 @@
 
 
 
-            var endDate = DateTime.Today;
-
-            var startDate = endDate.AddDays(-14);
-            allDates = Enumerable.Range(0, (int)(endDate - startDate).TotalDays + 1)
-                                     .Select(d => startDate.AddDays(d));
-
-            var loginCounts = from date in allDates
-                              join ae in logonEntries.Where(ae => ae.Action == "Login")
-                              on date equals ae.Timestamp.Date into grp
-                              select (double)grp.Count();
-
-            var uniqueLoginCounts = from date in allDates
-                                    join ae in logonEntries.Where(ae => ae.Action == "Login")
-                                    on date equals ae.Timestamp.Date into grp
-                                    select (double)grp.DistinctBy(g => g.Username).Count();
-
-
-            loginChart.Data = loginCounts.ToArray();
-            uniqueUsersChart.Data = uniqueLoginCounts.ToArray();
-
-
-
-            LoginSeries.Add(loginChart);
-            LoginSeries.Add(uniqueUsersChart);
+           
         }
 
 
     }
-    public async Task ToggleLineMode(MouseEventArgs args)
-    {
-
-        if (LoginChartOptions.InterpolationOption == InterpolationOption.Straight)
-            LoginChartOptions.InterpolationOption = InterpolationOption.Periodic;
-        else
-            LoginChartOptions.InterpolationOption = InterpolationOption.Straight;
-
-        await InvokeAsync(StateHasChanged);
-    }
+   
 }
