--- a/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
+++ b/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
@@ -7,32 +7,32 @@
     if (CurrentUser.State?.Preferences?.DashboardWidgets.Count > 0)
     {
         <MudDropContainer @ref=widgetContainer
-        T="UserDashboardWidget" Items="CurrentUser.State?.Preferences?.DashboardWidgets.OrderBy(uw => uw.Slot).ThenBy(uw => uw.Order)"
-        ItemsSelector="ItemSelector"
-        ItemDropped="ItemDropped"
-        Class="d-flex flex-wrap flex-grow-1 mud-width-full ">
+                          T="UserDashboardWidget" Items="CurrentUser.State?.Preferences?.DashboardWidgets.OrderBy(uw => uw.Slot).ThenBy(uw => uw.Order)"
+                          ItemsSelector="ItemSelector"
+                          ItemDropped="ItemDropped"
+                          Class="d-flex flex-wrap flex-grow-1 mud-width-full ">
             <ChildContent>
 
                 <FlexContainer Spacing="4" Class="mx-auto">
 
                     <MudCard Class="pa-0 mx-auto" Elevation="1">
                         <MudList Clickable="true"
-                        Class="d-flex flex-column ma-0 mx-auto py-0">
+                                 Class="d-flex flex-column ma-0 mx-auto py-0">
                             <MudDropZone AllowReorder=true
-                            T="UserDashboardWidget"
-                            Identifier="slot1"
-                            Class="flex-grow-1"
-                            Style="min-height:50px;min-width:300px;" />
+                                         T="UserDashboardWidget"
+                                         Identifier="slot1"
+                                         Class="flex-grow-1"
+                                         Style="min-height:50px;min-width:300px;" />
                         </MudList>
                     </MudCard>
                     <MudCard Class="pa-0 mx-auto" Elevation="2">
                         <MudList Clickable="true"
-                        Class="d-flex flex-column ma-0 mx-auto py-0">
+                                 Class="d-flex flex-column ma-0 mx-auto py-0">
                             <MudDropZone AllowReorder=true
-                            T="UserDashboardWidget"
-                            Identifier="slot2"
-                            Class="flex-grow-1"
-                            Style="min-height:50px; min-width:300px;" />
+                                         T="UserDashboardWidget"
+                                         Identifier="slot2"
+                                         Class="flex-grow-1"
+                                         Style="min-height:50px; min-width:300px;" />
                         </MudList>
                     </MudCard>
 
@@ -43,16 +43,16 @@
                     var widget = allWidgets.First(w => w.WidgetType == context.WidgetType);
                 }
                 <MudCard Class="my-5 " Elevation="1">
-                <MudCardHeader>
-                    <MudText Typo="Typo.h6"> @widget.Title</MudText>
-                    <MudSpacer />
-                    <AppCloseButton OnClick=@(async()=>{await RemoveWidget(context);}) />
+                    <MudCardHeader>
+                        <MudText Typo="Typo.h6"> @widget.Title</MudText>
+                        <MudSpacer />
+                        <AppCloseButton OnClick=@(async()=>{await RemoveWidget(context);}) />
 
-                </MudCardHeader>
+                    </MudCardHeader>
 
-                <DynamicComponent Type="@widget.GetType()" />
-            </MudCard>
-        </ItemRenderer>
+                    <DynamicComponent Type="@widget.GetType()" />
+                </MudCard>
+            </ItemRenderer>
         </MudDropContainer>
     }
     else
@@ -104,20 +104,25 @@
     private Task ItemDropped(MudItemDropInfo<UserDashboardWidget> dropItem)
     {
         if (dropItem.Item == null) return Task.CompletedTask;
-        var refItem = CurrentUser.State?.Preferences?.DashboardWidgets.Where(w => w.WidgetType == dropItem.Item.WidgetType).FirstOrDefault();
-
-        refItem.Slot = dropItem.DropzoneIdentifier;
-        refItem.Order = dropItem.IndexInZone;
-
-        foreach (var widget in CurrentUser.State.Preferences.DashboardWidgets)
+        if (CurrentUser.State != null)
         {
-            if (widget.Slot == dropItem.DropzoneIdentifier && widget.Order >= dropItem.IndexInZone)
+            var refItem = CurrentUser.State.Preferences?.DashboardWidgets.Where(w => w.WidgetType == dropItem.Item.WidgetType).FirstOrDefault();
+            if (refItem != null)
             {
-                widget.Order++;
+                refItem.Slot = dropItem.DropzoneIdentifier;
+                refItem.Order = dropItem.IndexInZone;
+
+                foreach (var widget in CurrentUser.State.Preferences.DashboardWidgets)
+                {
+                    if (widget.Slot == dropItem.DropzoneIdentifier && widget.Order >= dropItem.IndexInZone)
+                    {
+                        widget.Order++;
+                    }
+                }
+
+                CurrentUser.State.SaveUserSettings();
             }
         }
-
-        CurrentUser.State.SaveUserSettings();
         return Task.CompletedTask;
     }
 
@@ -132,31 +137,37 @@
     async Task AddWidget(DashboardWidgetType widgetType)
     {
         var order = 0;
-        if (CurrentUser.State?.Preferences?.DashboardWidgets.Count > 0)
+        if (CurrentUser.State != null)
         {
-            order = CurrentUser.State.Preferences.DashboardWidgets.Max(w => w.Order) + 1;
-        }
-        CurrentUser.State?.Preferences?.DashboardWidgets.Add(new UserDashboardWidget
+            if (CurrentUser.State.Preferences?.DashboardWidgets.Count > 0)
             {
-                Id = 0,
-                User = CurrentUser.State.Preferences,
-                Slot = "slot1",
-                WidgetType = widgetType,
-                Order = order
-            });
-        await CurrentUser.State.SaveUserSettings();
-        await InvokeAsync(StateHasChanged);
-        widgetContainer?.Refresh();
+                order = CurrentUser.State.Preferences.DashboardWidgets.Max(w => w.Order) + 1;
+            }
+            CurrentUser.State.Preferences?.DashboardWidgets.Add(new UserDashboardWidget
+                {
+                    Id = 0,
+                    User = CurrentUser.State.Preferences,
+                    Slot = "slot1",
+                    WidgetType = widgetType,
+                    Order = order
+                });
+            await CurrentUser.State.SaveUserSettings();
+            await InvokeAsync(StateHasChanged);
+            widgetContainer?.Refresh();
+        }
 
     }
     async Task RemoveWidget(UserDashboardWidget widget)
     {
-        CurrentUser.State?.Preferences?.DashboardWidgets.Remove(widget);
-        CurrentUser.State.SaveUserSettings();
+        if (CurrentUser.State != null)
+        {
+            CurrentUser.State.Preferences?.DashboardWidgets.Remove(widget);
+            await CurrentUser.State.SaveUserSettings();
 
-        await InvokeAsync(StateHasChanged);
+            await InvokeAsync(StateHasChanged);
 
-        widgetContainer?.Refresh();
+            widgetContainer?.Refresh();
+        }
 
     }
 }
