--- a/BLAZAMGui/UI/Inputs/AppCopyButton.razor
+++ b/BLAZAMGui/UI/Inputs/AppCopyButton.razor
@@ -1,6 +1,6 @@
 ﻿@inherits AppComponentBase
 @inject IJSRuntime JS
-<MudIconButton Icon="@Icons.Material.Filled.ContentCopy" OnClick="@(()=>{CopyToClipboard(TextToCopy);})" />
+<MudIconButton Icon="@Icons.Material.Filled.ContentCopy" OnClick="@(async()=>{await CopyToClipboard(TextToCopy);})" />
 
 @code {
     [Parameter]
