Minor bug avoidace and logging

--- a/BLAZAMGui/UI/Settings/AvailableUpdate.razor
+++ b/BLAZAMGui/UI/Settings/AvailableUpdate.razor
@@ -76,7 +76,7 @@
     {
         get
         {
-            if (Update.Branch == "Stable")
+            if (Update.Branch == ApplicationReleaseBranches.Stable)
                 return Update.Version.ReleaseDate.ToLongDateString();
             else
                 return DateTime.Parse(Update.Release.ReleaseTime.ToString()).ToLongDateString();
