--- a/BLAZAMGui/UI/Settings/UpdateSettings.razor
+++ b/BLAZAMGui/UI/Settings/UpdateSettings.razor
@@ -51,7 +51,7 @@
 
         <SettingsField Label="@AppLocalization["Update Credential Source"]">
 
-            <MudTextField T="string" Label="@AppLocalization["Update Credential Source"]" Disabled=true Value="@updateCredential.ToString().Replace('_',' ')" />
+            <MudTextField T="string" Label="@AppLocalization["Update Credential Source"]" Disabled=true Value="@updateCredential?.ToString().Replace('_',' ')" />
         </SettingsField>
 
         <SettingsField Label="@AppLocalization["Update Credentials"]">
