--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -11,16 +11,16 @@
         <SetSubHeader>
 
             <DirectoryEntryViewHeader DirectoryEntry="@Computer"
-                                  OnAssignTo="@(()=>{AssignToModal?.Show();})"
-                                  OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
-                                  OnDelete="@DeleteComputer"
-                                  OnDisable="@(async()=>{Computer.Enabled=false; await RefreshEntryComponents();})"
-                                  OnEnable="@(async()=>{Computer.Enabled=true; await RefreshEntryComponents();})"
-                                  OnMove="@(()=>{MoveToModal?.Show();})"
-                                  OnRename="@(()=>{RenameModal?.Show();})"
-                                  OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
-                                  OnToggleEditMode="ToggleEditMode"
-                                  OnUnlock="@Unlock" />
+                                      OnAssignTo="@(()=>{AssignToModal?.Show();})"
+                                      OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
+                                      OnDelete="@DeleteComputer"
+                                      OnDisable="@(async()=>{Computer.Enabled=false; await RefreshEntryComponents();})"
+                                      OnEnable="@(async()=>{Computer.Enabled=true; await RefreshEntryComponents();})"
+                                      OnMove="@(()=>{MoveToModal?.Show();})"
+                                      OnRename="@(()=>{RenameModal?.Show();})"
+                                      OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
+                                      OnToggleEditMode="ToggleEditMode"
+                                      OnUnlock="@Unlock" />
             <MudOverlay Visible="SavingChanges" DarkBackground="false" Absolute="true">
 
             </MudOverlay>
@@ -64,43 +64,23 @@
                     </Section>
 
                     <Section Title=@AppLocalization["Live Stats"]>
-                        <MudStack Row=true Class="@_fieldMudStackClasses">
-                            <LiveChart Enabled=@(Computer.IsOnline==true) SeriesName="CPU Usage" Title="Live CPU Usage" History="30" PollFunc="@(()=>{return Computer.Processor;})" />
-                            <LiveChart Enabled=@(Computer.IsOnline==true) SeriesName="Memory Usage" Title="Live RAM Usage" History="30" PollFunc="@(()=>{return Computer.MemoryUsedPercent;})" />
-                            <ComputerServices Computer="Computer" />
-
-                        </MudStack>
-
+                     
+                            <MudStack Row=true Class="@_fieldMudStackClasses">
+                               <ComputerResourceCharts Computer="Computer"/>
+                            </MudStack>
+                    </Section>
+                    
+                    <Section Title=@AppLocalization["Services"]>
+                  
+                            <MudStack Row=true Class="@_fieldMudStackClasses">
+                                <ComputerServices Computer="Computer" />
+                            </MudStack>
                     </Section>
 
                     <Section Title=@AppLocalization["Drive Details"]>
                         <MudStack Row=true Class="@_fieldMudStackClasses">
-                            @if (drives != null && drives.Count > 0)
-                            {
-                                <MudDataGrid Elevation=0 Items="drives.Where(d=>d.DriveType==DriveType.Fixed)">
-                                    <Columns>
-                                        <PropertyColumn Property="x=>x.DriveType" />
-                                        <PropertyColumn Property="x=>x.Letter" />
-                                        <TemplateColumn Title="Used">
-                                            <CellTemplate>
-                                                <MudProgressLinear Style="height:25px;" Value="@context.Item.PercentUsed.Round(0)"
-                                                           Color="@(context.Item.PercentUsed<70?Color.Success:context.Item.PercentUsed<80?Color.Warning:Color.Error)">
-                                                    @(context.Item.PercentUsed.Round(0).ToString() + "%")
-                                                </MudProgressLinear>
-                                            </CellTemplate>
-                                        </TemplateColumn>
-                                        <TemplateColumn Title="Capacity">
-                                            <CellTemplate>
-                                                @(context.Item.Capacity.Round(0).ToString() + "GB")
-                                            </CellTemplate>
-                                        </TemplateColumn>
-                                        <PropertyColumn Property="x=>x.FileSystem" />
-                                        <PropertyColumn Property="x=>x.Serial" />
-                                    </Columns>
-                                </MudDataGrid>
 
-                            }
-
+                            <ComputerDriveDetails Computer="Computer" />
                         </MudStack>
                     </Section>
 
@@ -110,17 +90,18 @@
 
 
                     <Section Title=@AppLocalization["Sessions"]>
-                        <MudStack Row=true Class="@_fieldMudStackClasses">
-                            <ComputerSessions Computer="Computer" />
+                     
+                            <MudStack Row=true Class="@_fieldMudStackClasses">
+                                <ComputerSessions Computer="Computer" />
 
-                        </MudStack>
-
+                            </MudStack>
+                        
                     </Section>
 
 
                     @if (Computer.CanReadAnyCustomFields)
                     {
-                        <Section Title="Additional Field">
+                        <Section Title=@AppLocalization["Additional Fields"]>
                             @if (CustomFields != null)
                             {
                                 @foreach (var field in CustomFields)
@@ -162,7 +143,6 @@
 
 
 @code {
-    List<IADComputerDrive> drives = new();
     IADComputer? Computer => DirectoryEntry as IADComputer;
     protected override async Task OnInitializedAsync()
     {
@@ -170,13 +150,7 @@
         await InvokeAsync(StateHasChanged);
         if (Computer != null)
         {
-            Task.Run(async () =>
-            {
-                drives = await Computer.GetDrivesAsync();
-
-                await RefreshEntryComponents();
-
-            });
+           
             Task.Run(() =>
             {
                 var services = Computer.Services;
