--- a/BLAZAMGui/UI/Computers/ComputerServices.razor
+++ b/BLAZAMGui/UI/Computers/ComputerServices.razor
@@ -2,55 +2,64 @@
 @using System.Diagnostics;
 @inherits AppComponentBase
 @implements IDisposable
-@if (sessionsErrorMessage == null)
+@if (Computer.IsOnline == true)
 {
-    <MudDataGrid Dense=true
-             HorizontalScrollbar=true
-             Elevation=0
-             Virtualize=true
-             OverscanCount="15"
-             FixedHeader=true
-             Height="350px"
-             Items="services">
-             
-        <Columns>
-            <TemplateColumn StickyLeft=true
-                        Title="Name">
-                <CellTemplate>
-                    <MudBadge Icon="@Icons.Material.Filled.Warning"
-                          Color=Color.Warning
-                          Visible=@(context.Item.Status!="OK")>
-                        @if (context.Item.DisplayName != null)
-                        {
-                            <MudText>@context.Item.DisplayName</MudText>
-                        }
-                        else
-                        {
-                            <MudText>@context.Item.Name</MudText>
 
-                        }
-                    </MudBadge>
-                </CellTemplate>
-            </TemplateColumn>
-            <TemplateColumn Title="Description">
-                <CellTemplate>
 
-                    <MudText Style="min-width:200px;max-width:400px;overflow-y:scroll;height:24px;">@context.Item.Description</MudText>
+    if (sessionsErrorMessage == null)
+    {
+        <MudDataGrid Dense=true
+                     HorizontalScrollbar=true
+                     Elevation=0
+                     Virtualize=true
+                     OverscanCount="15"
+                     FixedHeader=true
+                     Height="350px"
+                     Items="services">
 
-                </CellTemplate>
-            </TemplateColumn>
-            <PropertyColumn Property="x=>x.State" />
-            <PropertyColumn Property="x=>x.StartName" />
-            <PropertyColumn Property="x=>x.PathName" />
+            <Columns>
+                <TemplateColumn StickyLeft=true
+                                Title="Name">
+                    <CellTemplate>
+                        <MudBadge Icon="@Icons.Material.Filled.Warning"
+                                  Color=Color.Warning
+                                  Visible=@(context.Item.Status!="OK")>
+                            @if (context.Item.DisplayName != null)
+                            {
+                                <MudText>@context.Item.DisplayName</MudText>
+                            }
+                            else
+                            {
+                                <MudText>@context.Item.Name</MudText>
 
-        </Columns>
-    </MudDataGrid>
+                            }
+                        </MudBadge>
+                    </CellTemplate>
+                </TemplateColumn>
+                <TemplateColumn Title="Description">
+                    <CellTemplate>
+
+                        <MudText Style="min-width:200px;max-width:400px;overflow-y:scroll;height:24px;">@context.Item.Description</MudText>
+
+                    </CellTemplate>
+                </TemplateColumn>
+                <PropertyColumn Property="x=>x.State" />
+                <PropertyColumn Property="x=>x.StartName" />
+                <PropertyColumn Property="x=>x.PathName" />
+
+            </Columns>
+        </MudDataGrid>
+    }
+    else
+    {
+        <div>
+            @sessionsErrorMessage
+        </div>
+    }
 }
 else
 {
-    <div>
-        @sessionsErrorMessage
-    </div>
+    <MudText>Computer is not reachable.</MudText>
 }
 
 
@@ -86,7 +95,7 @@ else
     {
         try
         {
-            if (Computer != null)
+            if (Computer != null && Computer.IsOnline==true)
             {
                 services = Computer.Services;
 
